<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="authViewModel"
            type="com.example.myapplication.ui.auth.AuthViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutRoot"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_login"
        tools:context=".ui.auth.LoginActivity">

        <FrameLayout
            android:id="@+id/layoutProgressBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#28FFFFFF"
            android:visibility="gone"
            app:hideProgressBar="@{authViewModel.isShowProgressBar.get()}">

            <ProgressBar
                android:id="@+id/pbLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:indeterminate="true" />
        </FrameLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/text_app_name"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/llLoginForm"
            app:layout_constraintStart_toStartOf="@+id/llLoginForm" />

        <LinearLayout
            android:id="@+id/llLoginForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_lbl_email"
                android:textColor="@color/green_4DB6AC"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:backgroundTint="@color/white"
                android:drawableStart="@android:drawable/sym_action_email"
                android:drawablePadding="10dp"
                android:hint="@string/text_hint_input_email"
                android:text="@={authViewModel.email}"
                android:textColor="@color/white"
                android:textColorHint="@color/green_4DB6AC"
                android:textSize="15sp" />


            <TextView
                android:id="@+id/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_lbl_password"
                android:textColor="@color/green_4DB6AC"
                android:textColorHint="@color/white"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="10dp"
                android:backgroundTint="@color/white"
                android:drawableStart="@android:drawable/ic_lock_idle_lock"
                android:drawablePadding="10dp"
                android:hint="@string/text_hint_input_password"
                android:inputType="textPassword"
                android:text="@={authViewModel.password}"
                android:textColor="@color/white"
                android:textColorHint="@color/green_4DB6AC"
                android:textSize="15sp" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/green_4DB6AC"
            android:onClick="@{authViewModel::onLoginButtonClick}"
            android:text="@string/text_btn_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/llLoginForm" />

        <TextView
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Using biometric login"
            android:background="#BDB3B3"
            android:textColor="@color/green_4DB6AC"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnFace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:backgroundTint="#4DB6AC"
            android:drawableLeft="@drawable/ic_face"
            android:scaleType="fitXY"
            android:text="Login FaceID"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnFinger"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#4DB6AC"
            android:drawableLeft="@drawable/ic_fingerprint"
            android:scaleType="fitXY"
            android:text="Login FingerPrint"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnFace" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>